# study_caffe

./: CMakeLists.txt  unit_tests.cpp
cnn/: CMakeLists.txt  CNNNet.cpp  CNNNet.hpp  DeepNet.cpp  DeepNet.hpp  cnn.cpp  solver.prototxt  train_test.prototxt
dnn/: CMakeLists.txt  DenseNet.cpp  DenseNet.hpp  dnn.cpp  solver.prototxt  train_test.prototxt
predict_sin/: CMakeLists.txt  DenseNet.cpp  DenseNet.hpp  predict_sin.cpp  solver.prototxt  train_test.prototxt
tests/: CMakeLists.txt  unit_tests.cpp
